test de ajustes para movil y modo oscuro

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,7 +60,7 @@ body {
     --radius: 0.5rem;
   }
 
-  .dark {
+  /* .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
 
@@ -89,7 +89,7 @@ body {
     --destructive-foreground: 0 85.7% 97.3%;
 
     --ring: 217.2 32.6% 17.5%;
-  }
+  } */
 }
 
 @layer base {
