included legal documents

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,6 +65,10 @@ body {
     --radius: 0.5rem;
   }
 
+  .text-balance {
+    text-wrap: balance;
+  }
+
   /* .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
